@startuml

title __CRIPTOVIEW's Class Diagram__\n

  namespace  {
    namespace iew.CriptoView {
      abstract class View.CriptoView.CriptoView {
          - contentPane : JPanel
          + initComponents()
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace iew.CriptoView {
      class View.CriptoView.LightCriptoView {
      }
    }
  }
  

  View.CriptoView.CriptoView -up-|> javax.swing.JFrame
  View.CriptoView.LightCriptoView -up-|> View.CriptoView.CriptoView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
